2013-01-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* tree-vrp.c (range_fits_type_p): Require the MSB of the double_int
	to be clear for sign changes.

2013-01-01  Jan Hubicka  <jh@suse.cz>

	* ipa-inline-analysis.c: Fix formatting.

2013-01-01  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/55831
	* tree-vect-loop.c (get_initial_def_for_induction): Use
	gsi_after_labels instead of gsi_start_bb.

2012-12-27  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/rs6000.c (rs6000_deligitimze_address): Do not
	delegitimize TLS addresses on AIX.
	(rs6000_legitimize_tls_address_aix): Append TLS symbol qualifier.
	Set SYMBOL_FLAG_LOCAL on module symbol.
	(output_toc): Do not append TLS symbol qualifier here.
	* config/rs6000/rs6000.md (tls_get_addr_internal): Add GPR 4 to
	clobbers.

2012-12-27  Andreas Schwab  <schwab@linux-m68k.org>

	* target.def (supports_function_versions): Fix typo.

2012-12-26  Sriraman Tallam  <tmsriram@google.com>

	* doc/tm.texi.in (TARGET_OPTION_SUPPORTS_FUNCTION_VERSIONS): Document
	new target hook.
	* doc/tm.texi: Regenerate.
	* c-family/c-common.c (handle_target_attribute): Retain target attribute
	for targets that support versioning.
	* target.def (supports_function_versions): New hook.
	* cp/class.c (add_method): Remove calls
	to DECL_FUNCTION_SPECIFIC_TARGET.
	* config/i386/i386.c (ix86_function_versions): Use target string
	to check for function versions instead of target flags.
	* (ix86_supports_function_versions): New function.
	* (is_function_default_version): Check target string.
	* TARGET_OPTION_SUPPORTS_FUNCTION_VERSIONS: New macro.

2012-12-27  Steven Bosscher  <steven@gcc.gnu.org>

	* cgraph.c (verify_cgraph_node): Don't allocate/free visited_nodes set.

2012-12-25  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/53789
	* config/pa/pa.md (movsi): Reject expansion of TLS symbol references
	after reload starts.

2012-12-22  Jan Hubicka  <jh@suse.cz>

	PR lto/54728